Patch - 404 page template: Fixing overlap issue of signature on small screens (#2655)
* SVG overflow at 320px screen width (WCAG 1.4.10)

Discovered via automated Playwright test for WCAG 1.4.10 (Reflow). SVG was exceeding viewport width on small screens.
Ensures proper reflow and accessibility on narrow viewports.

* Update sites/servermessage/_screen.scss

---------

--- a/sites/servermessage/_screen.scss
+++ b/sites/servermessage/_screen.scss
@@ -12,6 +12,7 @@
 #gcwu-sig,
 #wmms {
 	height: 2em;
+	max-width: 100%;
 }
 
 #wmms {
